--- a/talkmap.ipynb
+++ b/talkmap.ipynb
@@ -33,7 +33,9 @@
     "!pip install getorg --upgrade\n",
     "import glob\n",
     "import getorg\n",
-    "from geopy import Nominatim"
+    "from geopy import Nominatim\n",
+    "\n",
+    "#note"
    ]
   },
   {
